Add initial version performing heap dumps of all JVMs currently reachable via the Attach API